generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ─── Identity & Access ─────────────────────────────────────────────────────

model User {
  id            String        @id @default(uuid())
  username      String?       @unique
  passwordHash  String
  fullName      String
  email         String?
  phone         String?
  status        UserStatus    @default(ACTIVE)
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt

  userRoles            UserRole[]
  refreshTokens        RefreshToken[]
  auditLogs            AuditLog[]      @relation("AuditLogActor")
  examinations         Examination[]   @relation("DoctorExaminations")
  createdVisits        Visit[]         @relation("VisitCreatedBy")
  doctorProfile        DoctorProfile?
  staffSchedules       StaffSchedule[]
  createdAppointments  Appointment[]   @relation("AppointmentCreatedBy")
  measuredVitals       VitalSign[]     @relation("VitalSignMeasuredBy")
  orderedServices      ServiceOrder[]  @relation("ServiceOrderedBy")
  collectedSamples     LabSample[]     @relation("LabSampleCollectedBy")
  enteredLabResults    LabResult[]     @relation("LabResultEnteredBy")
  verifiedLabResults   LabResult[]     @relation("LabResultVerifiedBy")
  stockMovements       StockMovement[] @relation("StockMovementCreatedBy")
  dispenses            Dispense[]      @relation("DispensedBy")
}

model Role {
  id          String   @id @default(uuid())
  code        String?  @unique
  name        String
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  userRoles       UserRole[]
  rolePermissions RolePermission[]
}

model Permission {
  id          String   @id @default(uuid())
  code        String   @unique
  name        String
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  rolePermissions RolePermission[]
}

model UserRole {
  userId    String
  roleId    String
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  role Role @relation(fields: [roleId], references: [id], onDelete: Cascade)

  @@id([userId, roleId])
}

model RolePermission {
  roleId       String
  permissionId String

  role       Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permission Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@id([roleId, permissionId])
}

model RefreshToken {
  id        String    @id @default(uuid())
  userId    String
  tokenHash String
  revokedAt DateTime?
  expiresAt DateTime
  createdAt DateTime  @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([tokenHash])
}

model AuditLog {
  id         String   @id @default(uuid())
  actorId    String?
  action     String
  entityType String
  entityId   String?
  before     Json?
  after      Json?
  createdAt  DateTime @default(now())

  actor User? @relation("AuditLogActor", fields: [actorId], references: [id])

  @@index([entityType, entityId])
  @@index([actorId])
}

// ─── Clinical ──────────────────────────────────────────────────────────────

model Patient {
  id          String    @id @default(uuid())
  patientCode String    @unique
  fullName    String
  dob         DateTime?
  gender      String?
  phone       String?
  citizenId   String?   @unique
  address     String?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  visits      Visit[]
  appointments Appointment[]

  @@index([fullName])
  @@index([phone])
}

model Visit {
  id              String      @id @default(uuid())
  patientId       String
  visitDate       DateTime    @db.Date
  queueNumber     Int
  reason          String?
  status          VisitStatus @default(REGISTERED)
  createdByUserId String
  departmentId    String?
  appointmentId   String?     @unique
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt

  examination   Examination?
  invoice       Invoice?
  createdByUser User          @relation("VisitCreatedBy", fields: [createdByUserId], references: [id])
  patient       Patient       @relation(fields: [patientId], references: [id])
  department    Department?   @relation(fields: [departmentId], references: [id])
  appointment   Appointment?  @relation("AppointmentVisit", fields: [appointmentId], references: [id])
  queueTicket   QueueTicket?
  vitalSign     VitalSign?
  serviceOrders ServiceOrder[]
  dispenses     Dispense[]

  @@unique([visitDate, queueNumber])
  @@unique([patientId, visitDate])
  @@index([visitDate])
  @@index([status])
}

model Examination {
  id            String            @id @default(uuid())
  visitId       String            @unique
  doctorUserId  String
  symptoms      String?
  clinicalNotes String?
  conclusion    String?
  status        ExaminationStatus @default(OPEN)
  completedAt   DateTime?
  createdAt     DateTime          @default(now())
  updatedAt     DateTime          @updatedAt

  diagnoses     Diagnosis[]
  doctor        User          @relation("DoctorExaminations", fields: [doctorUserId], references: [id])
  visit         Visit         @relation(fields: [visitId], references: [id])
  prescription  Prescription?
  serviceOrders ServiceOrder[]
}

model Disease {
  id        String      @id @default(uuid())
  code      String      @unique
  name      String
  isActive  Boolean     @default(true)
  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt
  diagnoses Diagnosis[]

  @@index([isActive])
}

model Diagnosis {
  id            String      @id @default(uuid())
  examinationId String
  diseaseId     String?
  name          String
  isPrimary     Boolean     @default(false)
  createdAt     DateTime    @default(now())

  disease     Disease?    @relation(fields: [diseaseId], references: [id])
  examination Examination @relation(fields: [examinationId], references: [id], onDelete: Cascade)

  @@index([examinationId])
}

model Drug {
  id                String             @id @default(uuid())
  name              String             @unique
  unit              String
  price             Decimal            @db.Decimal(12, 2)
  isActive          Boolean            @default(true)
  createdAt         DateTime           @default(now())
  updatedAt         DateTime           @updatedAt

  prescriptionItems PrescriptionItem[]
  stockLots         StockLot[]
  stockMovements    StockMovement[]
  dispenseItems     DispenseItem[]

  @@index([isActive])
}

model Prescription {
  id            String             @id @default(uuid())
  examinationId String             @unique
  note          String?
  createdAt     DateTime           @default(now())
  updatedAt     DateTime           @updatedAt

  examination Examination        @relation(fields: [examinationId], references: [id])
  items       PrescriptionItem[]
  dispense    Dispense?
}

model PrescriptionItem {
  id             String       @id @default(uuid())
  prescriptionId String
  drugId         String
  quantity       Int
  dosage         String
  unitPrice      Decimal      @db.Decimal(12, 2)
  lineTotal      Decimal      @db.Decimal(12, 2)
  createdAt      DateTime     @default(now())

  drug         Drug         @relation(fields: [drugId], references: [id])
  prescription Prescription @relation(fields: [prescriptionId], references: [id], onDelete: Cascade)
  dispenseItem DispenseItem?

  @@unique([prescriptionId, drugId])
}

model Invoice {
  id          String        @id @default(uuid())
  visitId     String        @unique
  totalAmount Decimal       @db.Decimal(12, 2)
  paidAmount  Decimal       @default(0) @db.Decimal(12, 2)
  status      InvoiceStatus @default(DRAFT)
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  visit    Visit         @relation(fields: [visitId], references: [id])
  items    InvoiceItem[]
  payments Payment[]

  @@index([status])
}

model InvoiceItem {
  id            String   @id @default(uuid())
  invoiceId     String
  description   String
  quantity      Int
  unitPrice     Decimal  @db.Decimal(12, 2)
  lineTotal     Decimal  @db.Decimal(12, 2)
  itemType      String?
  referenceType String?
  referenceId   String?
  createdAt     DateTime @default(now())

  invoice Invoice @relation(fields: [invoiceId], references: [id], onDelete: Cascade)
}

model Payment {
  id        String        @id @default(uuid())
  invoiceId String
  amount    Decimal       @db.Decimal(12, 2)
  method    PaymentMethod
  note      String?
  paidAt    DateTime      @default(now())
  createdAt DateTime      @default(now())

  invoice Invoice @relation(fields: [invoiceId], references: [id], onDelete: Cascade)
}

model RegulationVersion {
  id          String           @id @default(uuid())
  isActive    Boolean          @default(false)
  activatedAt DateTime?
  note        String?
  createdAt   DateTime         @default(now())

  items RegulationItem[]

  @@index([isActive])
}

model RegulationItem {
  id        String            @id @default(uuid())
  versionId String
  key       String
  value     String

  version RegulationVersion @relation(fields: [versionId], references: [id], onDelete: Cascade)

  @@unique([versionId, key])
}

// ─── Organization ──────────────────────────────────────────────────────────

model Department {
  id          String   @id @default(uuid())
  code        String   @unique
  name        String
  description String?
  isActive    Boolean  @default(true)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  rooms          Room[]
  staffSchedules StaffSchedule[]
  appointments   Appointment[]
  queueTickets   QueueTicket[]
  visits         Visit[]
  doctorProfiles DoctorProfile[]
}

model Room {
  id           String   @id @default(uuid())
  departmentId String
  code         String
  name         String
  roomType     String
  isActive     Boolean  @default(true)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  department     Department      @relation(fields: [departmentId], references: [id])
  staffSchedules StaffSchedule[]
  appointments   Appointment[]

  @@unique([departmentId, code])
}

model DoctorProfile {
  id           String   @id @default(uuid())
  userId       String   @unique
  departmentId String
  title        String?
  specialty    String?
  isActive     Boolean  @default(true)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  user         User            @relation(fields: [userId], references: [id])
  department   Department      @relation(fields: [departmentId], references: [id])
  schedules    StaffSchedule[]
  appointments Appointment[]
}

model StaffSchedule {
  id                  String   @id @default(uuid())
  userId              String
  departmentId        String
  roomId              String?
  workDate            DateTime @db.Date
  startTime           String
  endTime             String
  slotDurationMinutes Int      @default(15)
  maxAppointments     Int      @default(20)
  status              String   @default("ACTIVE")
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  user          User           @relation(fields: [userId], references: [id], map: "StaffSchedule_user_fkey")
  department    Department     @relation(fields: [departmentId], references: [id])
  room          Room?          @relation(fields: [roomId], references: [id])
  doctorProfile DoctorProfile? @relation(fields: [userId], references: [userId], map: "StaffSchedule_doctorProfile_fkey")
  appointments  Appointment[]

  @@index([workDate])
  @@index([userId, workDate])
}

model Appointment {
  id              String            @id @default(uuid())
  patientId       String
  doctorProfileId String
  departmentId    String
  roomId          String?
  scheduleId      String?
  scheduledAt     DateTime
  durationMinutes Int               @default(15)
  status          AppointmentStatus @default(SCHEDULED)
  reason          String?
  createdById     String
  createdAt       DateTime          @default(now())
  updatedAt       DateTime          @updatedAt

  patient       Patient        @relation(fields: [patientId], references: [id])
  doctorProfile DoctorProfile  @relation(fields: [doctorProfileId], references: [id])
  department    Department     @relation(fields: [departmentId], references: [id])
  room          Room?          @relation(fields: [roomId], references: [id])
  schedule      StaffSchedule? @relation(fields: [scheduleId], references: [id])
  createdBy     User           @relation("AppointmentCreatedBy", fields: [createdById], references: [id])
  visit         Visit?         @relation("AppointmentVisit")

  @@index([patientId])
  @@index([doctorProfileId, scheduledAt])
  @@index([departmentId, scheduledAt])
}

model QueueTicket {
  id           String      @id @default(uuid())
  visitId      String      @unique
  departmentId String
  queueDate    DateTime    @db.Date
  queueNumber  Int
  priority     Int         @default(0)
  status       QueueStatus @default(WAITING)
  calledAt     DateTime?
  completedAt  DateTime?
  createdAt    DateTime    @default(now())
  updatedAt    DateTime    @updatedAt

  visit      Visit      @relation(fields: [visitId], references: [id])
  department Department @relation(fields: [departmentId], references: [id])

  @@unique([departmentId, queueDate, queueNumber])
  @@index([departmentId, queueDate, status])
}

model VitalSign {
  id           String   @id @default(uuid())
  visitId      String   @unique
  measuredById String
  pulse        Int?
  systolicBp   Int?
  diastolicBp  Int?
  temperature  Decimal? @db.Decimal(4, 1)
  spo2         Int?
  heightCm     Decimal? @db.Decimal(5, 1)
  weightKg     Decimal? @db.Decimal(5, 1)
  bmi          Decimal? @db.Decimal(4, 1)
  note         String?
  measuredAt   DateTime @default(now())
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  visit      Visit @relation(fields: [visitId], references: [id])
  measuredBy User  @relation("VitalSignMeasuredBy", fields: [measuredById], references: [id])
}

// ─── Services & Lab ────────────────────────────────────────────────────────

model ServiceCatalog {
  id        String      @id @default(uuid())
  code      String      @unique
  name      String
  type      ServiceType
  price     Decimal     @db.Decimal(12, 2)
  isActive  Boolean     @default(true)
  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt

  serviceOrders ServiceOrder[]
  labTest       LabTestCatalog?

  @@index([type, isActive])
}

model LabTestCatalog {
  id              String   @id @default(uuid())
  serviceId       String   @unique
  code            String   @unique
  sampleType      String
  turnaroundHours Int      @default(24)
  referenceRange  String?

  service   ServiceCatalog @relation(fields: [serviceId], references: [id])
  labOrders LabOrder[]
}

model ServiceOrder {
  id            String             @id @default(uuid())
  visitId       String
  examinationId String?
  serviceId     String
  orderedById   String
  status        ServiceOrderStatus @default(ORDERED)
  isRequired    Boolean            @default(false)
  priceSnapshot Decimal            @db.Decimal(12, 2)
  billingStatus String             @default("PENDING")
  orderedAt     DateTime           @default(now())
  createdAt     DateTime           @default(now())
  updatedAt     DateTime           @updatedAt

  visit       Visit          @relation(fields: [visitId], references: [id])
  examination Examination?   @relation(fields: [examinationId], references: [id])
  service     ServiceCatalog @relation(fields: [serviceId], references: [id])
  orderedBy   User           @relation("ServiceOrderedBy", fields: [orderedById], references: [id])
  labOrder    LabOrder?

  @@index([visitId])
  @@index([examinationId])
}

model LabOrder {
  id             String         @id @default(uuid())
  serviceOrderId String         @unique
  labTestId      String
  status         LabOrderStatus @default(ORDERED)
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt

  serviceOrder ServiceOrder   @relation(fields: [serviceOrderId], references: [id])
  labTest      LabTestCatalog @relation(fields: [labTestId], references: [id])
  samples      LabSample[]
  results      LabResult[]
}

model LabSample {
  id            String   @id @default(uuid())
  labOrderId    String
  collectedById String
  sampleType    String
  status        String   @default("COLLECTED")
  collectedAt   DateTime @default(now())
  note          String?
  createdAt     DateTime @default(now())

  labOrder    LabOrder @relation(fields: [labOrderId], references: [id])
  collectedBy User     @relation("LabSampleCollectedBy", fields: [collectedById], references: [id])
}

model LabResult {
  id             String    @id @default(uuid())
  labOrderId     String
  enteredById    String
  verifiedById   String?
  resultText     String?
  resultValue    Decimal?  @db.Decimal(10, 4)
  unit           String?
  referenceRange String?
  status         String    @default("RESULT_ENTERED")
  enteredAt      DateTime  @default(now())
  verifiedAt     DateTime?
  createdAt      DateTime  @default(now())
  updatedAt      DateTime  @updatedAt

  labOrder   LabOrder @relation(fields: [labOrderId], references: [id])
  enteredBy  User     @relation("LabResultEnteredBy", fields: [enteredById], references: [id])
  verifiedBy User?    @relation("LabResultVerifiedBy", fields: [verifiedById], references: [id])
}

// ─── Pharmacy & Inventory ─────────────────────────────────────────────────

model StockLot {
  id             String    @id @default(uuid())
  drugId         String
  lotNumber      String
  expiryDate     DateTime  @db.Date
  quantityOnHand Int       @default(0)
  unitCost       Decimal?  @db.Decimal(12, 2)
  receivedAt     DateTime  @default(now())
  createdAt      DateTime  @default(now())
  updatedAt      DateTime  @updatedAt

  drug          Drug            @relation(fields: [drugId], references: [id])
  movements     StockMovement[]
  dispenseItems DispenseItem[]

  @@unique([drugId, lotNumber])
  @@index([drugId, expiryDate])
}

model StockMovement {
  id            String            @id @default(uuid())
  drugId        String
  lotId         String
  movementType  StockMovementType
  quantity      Int
  referenceType String?
  referenceId   String?
  note          String?
  createdById   String
  createdAt     DateTime          @default(now())

  drug      Drug      @relation(fields: [drugId], references: [id])
  lot       StockLot  @relation(fields: [lotId], references: [id])
  createdBy User      @relation("StockMovementCreatedBy", fields: [createdById], references: [id])

  @@index([drugId])
  @@index([lotId])
  @@index([createdAt])
}

model Dispense {
  id             String         @id @default(uuid())
  prescriptionId String         @unique
  visitId        String
  dispensedById  String
  status         DispenseStatus @default(PENDING)
  dispensedAt    DateTime?
  note           String?
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt

  prescription Prescription  @relation(fields: [prescriptionId], references: [id])
  visit        Visit         @relation(fields: [visitId], references: [id])
  dispensedBy  User          @relation("DispensedBy", fields: [dispensedById], references: [id])
  items        DispenseItem[]

  @@index([visitId])
  @@index([status])
}

model DispenseItem {
  id                 String   @id @default(uuid())
  dispenseId         String
  prescriptionItemId String   @unique
  drugId             String
  lotId              String
  quantity           Int
  unitPriceSnapshot  Decimal  @db.Decimal(12, 2)
  createdAt          DateTime @default(now())

  dispense         Dispense         @relation(fields: [dispenseId], references: [id], onDelete: Cascade)
  prescriptionItem PrescriptionItem @relation(fields: [prescriptionItemId], references: [id])
  drug             Drug             @relation(fields: [drugId], references: [id])
  lot              StockLot         @relation(fields: [lotId], references: [id])
}

// ─── Enums ─────────────────────────────────────────────────────────────────

enum UserStatus {
  ACTIVE
  INACTIVE
  LOCKED
}

enum VisitStatus {
  REGISTERED
  WAITING
  IN_EXAMINATION
  COMPLETED
  CANCELLED
}

enum ExaminationStatus {
  OPEN
  COMPLETED
  CANCELLED
}

enum InvoiceStatus {
  DRAFT
  ISSUED
  PARTIALLY_PAID
  PAID
  VOID
}

enum PaymentMethod {
  CASH
  TRANSFER
  CARD
}

enum AppointmentStatus {
  SCHEDULED
  CHECKED_IN
  CANCELLED
  NO_SHOW
}

enum QueueStatus {
  WAITING
  CALLED
  IN_SERVICE
  DONE
  SKIPPED
  CANCELLED
}

enum ServiceType {
  CONSULTATION
  LAB_TEST
  PROCEDURE
  IMAGING
  MATERIAL
}

enum DispenseStatus {
  PENDING
  DISPENSED
  CANCELLED
}

enum StockMovementType {
  IN
  OUT
  ADJUSTMENT
}

enum LabOrderStatus {
  ORDERED
  SAMPLE_COLLECTED
  RESULT_ENTERED
  VERIFIED
  CANCELLED
}

enum ServiceOrderStatus {
  ORDERED
  IN_PROGRESS
  COMPLETED
  CANCELLED
}
